<resources>
    <string name="app_name">SistelGroup</string>
    <string name="Company">00000000</string>
    <string name="Name">Nom</string>
    <string name="Surname">Cognom</string>
    <string name="dni">DNI</string>
    <string name="checkin">Registra</string>
    <string name="whosvisiting">A qui visita?</string>
    <string name="motiu">Motiu</string>
    <string name="Success">Correcte</string>
    <string name="idioma_canviat">Idioma canviat correctament</string>
    <string name="URLerror">URL incorrecta</string>
    <string name="NameCompany">Nom Empresa</string>
    <string name="hello">Hola</string>
    <string name="external_dir">GetSignature</string>
    <string name="cancel">Cancel·lar</string>
    <string name="clear">Netejar</string>
    <string name="sign">Signar</string>
    <string name="RGPD">Accepto les polítiques de l\'empresa</string>
    <string name="RGPDTitle">PACTO DE CONFIDENCIALIDAD Y LEALTAD</string>
    <string name="RGPDMessage">text RGPD</string>
    <string name="Accept">Aceptar</string>
    <string name="Decline">Rechazar</string>
    <string name="RGPDMessage1">a</string>
    <string name="Rellenar">Ompli tots els camps obligatoris abans de continuar</string>
    <string name="moreinfo">Leer más información sobre las políticas de empresa</string>
    <string name="text_no_fotosmovil">Per qüestions de confidencialitat, no es permet accedir a la planta de producció amb dispositius mòbils o càmeres de fotos.\nAquests dispositius hauran de guardar-se a les taquilles assignades per aquest fi.</string>
    <string-array name="List_CompanyVisited">
        <item>SistelGroup</item>
        <item>S.A. Sistel</item>
        <item>DigiProces S.A.</item>
        <item>6TL Engineering</item>
        <item>SmartLift S.L.</item>
    </string-array>


    <string-array name="List_Visited">
        <item>Gerard</item>
        <item>Xavi</item>
        <item>David</item>
        <item>Roger</item>
    </string-array>
</resources>
