<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="7">

        <TextView
            android:id="@+id/CompanyVisited"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <AutoCompleteTextView
            android:id="@+id/Visited"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/whosvisiting"
            android:inputType="textCapCharacters"/>

        <EditText
            android:id="@+id/Company"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/Company"
            android:inputType="textCapCharacters"/>

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/Name"
            android:inputType="textCapCharacters"/>

        <EditText
            android:id="@+id/DNI"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/dni"
            android:maxLength="9"
            android:inputType="textCapCharacters"
            android:textSize="30sp" />


        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/spinner_style"
            android:orientation="horizontal"
            android:weightSum="3">

         <Spinner
            android:id="@+id/Motiu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:layout_weight="2"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@android:drawable/arrow_down_float"
                android:layout_weight="1"/>
        </LinearLayout> -->


        <Spinner
            android:id="@+id/Motiu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <!--<EditText
            android:id="@+id/Motiu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/motiu"
            android:inputType="text"/>-->

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/load"
            android:textColor="?colorAccent"
            android:text="@string/checkin" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>